--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name=".ui.result.ResultActivity" />
+        <activity android:name=".ui.newTest.NewTestActivity" />
 
     </application>
 
