--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
 
         <activity android:name=".ui.result.ResultActivity" />
         <activity android:name=".ui.newTest.NewTestActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name=".ui.profile.ProfileActivity"
+                android:label=""/>
 
     </application>
 
