--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.splash.SplashActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:label="@string/app_name"
@@ -29,6 +29,7 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.result.ResultActivity" />
         <activity android:name=".ui.newTest.NewTestActivity" />
         <activity android:name=".ui.login.LoginActivity" />
